shelter/pages/main/styles.css
/* Global */

* {
    margin: 0;
    padding: 0;
    font-weight: 400;
    letter-spacing: 0.06em;
}

html {
    scroll-behavior: smooth;
}

:root {
    --color-primary: #f1cdb3;
    --color-primary-dark: #cdcdcd;
    --color-primary-light: #fddcc4;
    --color-second: #fff;
    --color-dark: #292929;
    --color-dark-second: #545454;
    --color-dark-third: #4c4c4c;
    --color-dark-fourth: #b2b2b2;
    --color-light: #f6f6f6;
    --color-light-second: #fafafa;
}

h1 {
    font-family: Georgia;
    color: var(--color-primary);
    padding-bottom: 10px;
    font-size: 32px;
    line-height: 110%;
}

h1 a {
    color: var(--color-primary);
}

h3 {
    font-family: Georgia;
    color: var(--color-dark-second);
    font-size: 35px;
    line-height: 130%;
}

h4 {
    font-family: Georgia;
    font-size: 20px;
    line-height: 115%;
    color: var(--color-dark-second);
}
h4 a {
    color: var(--color-dark-second);
}

h5 {
    font-family: Georgia;
    font-size: 15px;
    line-height: 110%;
    color: var(--color-dark-second);
}

.container {
    display: flex;
    flex-direction: column;
}

@font-face {
    font-family: "Georgia";
    src: url("../../assets/fonts/georgia/georgia-regular.ttf") format("ttf");
  }

  a {
    text-decoration: none;
}


/* Start Screen */

#start_screen {
    display: flex;
    flex-direction: column;
    background-image: url('../../assets/images/main/start-screen-background.png');
    background: linear-gradient(90deg, rgba(91,72,58,1) 0%, rgba(38,36,37,1) 100%);
}

header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin: 30px 40px;
}

#logo {
    display: flex;
    flex-direction: column;
}

#logo p {
    margin:0;
}

#logo_phrase {
    font-family: Arial;
    font-size: 13px;
    letter-spacing: 0.01em;
    color: var(--color-second);
}

nav ul {
    display: flex;
    grid-gap: 35px;
}

nav ul li:first-child {
    border-bottom: 3px var(--color-primary) solid;
    cursor: default;
}

nav li {
    list-style: none;
    font-family: Arial;
    font-size: 15px;
    line-height: 160%;
    color: var(--color-primary-dark);
}

nav li a {
    color: var(--color-primary-dark);
}

nav li a:hover {
    color: var(--color-light-second);
    cursor: pointer;
    font-size: 110%;
}

nav li a:active {
    color: var(--color-light-second);
    border-bottom: 3px var(--color-primary) solid;
}

#welcome {
    display: flex;
    grid-gap: 42px;
    margin: 60px 40px 0 40px;
    height: 728px;
}

#start_screen h2 {
    font-family: Georgia;
    font-size: 44px;
    line-height: 130%;
    color: var(--color-second);
    
}

#welcome_text {
    margin-top: 163px;
    display: flex;
    flex-direction: column;
    grid-gap: 42px;
}

#welcome_text p {
    font-family: Arial;
    font-size: 15px;
    line-height: 160%;
    color: var(--color-primary-dark);
}

#button_items {
    width: 207px;
    height: 52px;
    border-radius: 100px;
    background-color: var(--color-primary);
    color: var(--color-dark);
    font-family: Georgia;
    font-size: 17px;
    text-decoration: none;
    border: none;
    align-content: center;
    text-align: center;
}

#button_items a {
    color: var(--color-dark);
}

#button_items a:hover {
    color: var(--color-dark);
    background-color: var(--color-primary-light);
}

#button_items:hover {
    background-color: var(--color-primary-light);
}

/* About */

#about {
    background: var(--color-second);
    display: flex;
    justify-content: center;
}

#about_content {
    display: flex;
    flex-direction: row;
    height: 408px;
    margin: 80px 40px 100px 40px;
    justify-content: center;
    grid-gap:120px;
    align-items: center;
    padding: 0 175px;
}

#about_image {
    width: 300px;
}

#about_text {
    display: flex;
    flex-direction: column;
    height: 380px;
    margin: 14px 0;
}

#about_text h3, #about_text p {
    margin-bottom: 25px;
}

#about_text p {
    font-family: Arial;
    font-size: 15px;
    line-height: 160%;
    color: var(--color-dark-third);
}

/* Pets */

#pets {
    background-color: var(--color-light);
}

#pets_content {
    display: flex;
    height: 697px;
    margin: 80px 40px 100px 40px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#pets_content h3 {
    text-align: center;
}

#slider {
    margin: 60px 0;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.button_arrow {
    border: 2px solid var(--color-primary);
    border-radius: 100px;
    background: var(--color-light);
    width: 52px;
    height: 52px;
}

.card:hover {
    outline: 2px solid var(--color-primary);
}

.card:hover button {
    background: var(--color-primary);
    cursor: pointer;
}

.card {
    border-radius: 9px;
    width: 270px;
    height: 435px;
    background: var(--color-light-second);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    margin: 0 45px;
}

.card p {
    font-family: Georgia;
    font-size: 20px;
    text-align: center;
    color: var(--color-dark-second);
}

.pet_name {
    margin-top: 30px;
}

.button_learn {
    border: 2px solid var(--color-primary);
    border-radius: 100px;
    width: 187px;
    height: 52px;
    margin: 30px 41.5px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: Georgia;
    font-size: 17px;
    text-align: center;
    color: var(--color-dark);
    background: var(--color-light-second);
}

#button_pets {
    width: 261px;
    height: 52px;
    border-radius: 100px;
    padding: 15px 45px;
    background: var(--color-primary);
    display: flex;
    justify-content: center;
    align-items: center;
    border: none;
}

#button_pets a{
    color: var(--color-dark);
    font-family: Georgia;
    font-size: 17px;
}

#button_pets a:hover {
    color: var(--color-dark);
}

#button_pets:hover {
    background-color: var(--color-primary-light);
}

/* Help */

#help {
    display: flex;
    flex-direction: column;
}

#help_content {
    margin: 80px 40px 100px 40px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#help_content h3 {
    text-align: center;
}

#help_list {
    margin: 60px 87px 0 87px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    grid-gap:120px;
    justify-content: center;
}

.help_card {
    height: 113px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.help_image {
    width: 60px;
    height: 60px;
    margin: 0 11px 30px 11px;
}

/* Donation */

#donation {
    display: flex;
    background: var(--color-light);
}

#donation_content {
    margin: 80px auto 100px auto;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    grid-gap:20px;
}

#donation_image {
    margin: 10px;
}

#donation_info {
    height: 282px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    grid-gap: 20px;
}

#card {
    display: flex;
    flex-direction: row;
    grid-gap: 15px;
    background: var(--color-primary);
    border-radius: 9px;
    padding: 10px 15px;
    align-items: center;
    width: fit-content;
}

#donation_info p {
    font-family: Arial, sans-serif;
    font-style: italic;
    font-size: 12px;
    line-height: 150%;
    color: var(--color-dark-fourth);
    width: 380px;
}

/* Footer */

footer {
    display: flex;
    background-image: url('../../assets/images/main/start-screen-background.png');
    background: linear-gradient(90deg, rgba(91,72,58,1) 0%, rgba(38,36,37,1) 100%);
}

#footer_content {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    grid-gap: 160px;
    margin: 40px 40px 0 40px;
}

.footer_section {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    grid-gap: 32px;
    margin-top: 16px;
    margin-bottom: 60px;
}

.footer_row {
    display: flex;
    flex-direction: row;
    grid-gap: 20px;
    align-items: center;
}

footer h3 {
    color: var(--color-second);
}

footer h4 {
    color: var(--color-primary);
}

footer a {
    color: var(--color-primary);
}

